--- a/src/App.scss
+++ b/src/App.scss
@@ -2,5 +2,9 @@
   list-style: none;
   margin: 0;
   padding: 0;
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 200px);
+  grid-gap: 20px;
+  margin-left: 0;
+  padding-left: 0;
 }
