Added positioning styles to main container

--- a/src/components/MovieList/MovieList.scss
+++ b/src/components/MovieList/MovieList.scss
@@ -1,3 +1,11 @@
+.movies {
+  display: flex;
+
+  &__container {
+    width: calc(100vw - 200px);
+  }
+}
+
 .movie-list {
   list-style: none;
   margin: 0;
