Style adjustments to App

--- a/src/components/SortBar/SortBar.scss
+++ b/src/components/SortBar/SortBar.scss
@@ -4,6 +4,7 @@
   width: 400px;
   display: flex;
   justify-content: space-between;
+  margin-bottom: 10px;
   &__buttons {
     width: 250px;
     display: flex;
