Added loader spinner to MovieList and adjusted spacing

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,7 +6,6 @@
   font-style: italic;
   text-align: center;
   width: 100%;
-  margin: 10px 20px;
+  margin: 10px 0;
   font-weight: 500;
-  cursor: pointer;
 }
