--- a/src/components/MovieList/MovieList.scss
+++ b/src/components/MovieList/MovieList.scss
@@ -1,5 +1,8 @@
+@import "../../styles-assets/extends";
+
 .movies {
   display: flex;
+  width: 100%;
 
   &__container {
     width: calc(100vw - 200px);
@@ -7,6 +10,7 @@
 }
 
 .movie-list {
+  width: calc(100vw - 200px);
   list-style: none;
   margin: 0;
   padding: 0;
@@ -15,4 +19,9 @@
   grid-gap: 20px;
   margin-left: 0;
   padding-left: 0;
+}
+
+.loader {
+  @extend %loader;
+  margin: 200px auto;
 }
