Applied styles to No Results messagge

--- a/src/components/MovieList/MovieList.scss
+++ b/src/components/MovieList/MovieList.scss
@@ -25,3 +25,9 @@
   @extend %loader;
   margin: 200px auto;
 }
+
+.no-results {
+  text-align: center;
+  margin: 200px auto;
+  line-height: 2em;
+}
