--- a/src/components/MovieList/MovieList.scss
+++ b/src/components/MovieList/MovieList.scss
@@ -10,14 +10,13 @@
 }
 
 .movie-list {
-  width: calc(100vw - 200px);
+  width: calc(100vw - 320px);
   list-style: none;
   margin: 0;
   padding: 0;
   display: grid;
   grid-template-columns: repeat(auto-fill, 200px);
   grid-gap: 20px;
-  margin-left: 0;
   padding-left: 0;
 }
 
@@ -30,4 +29,23 @@
   text-align: center;
   margin: 200px auto;
   line-height: 2em;
+}
+
+@media only screen and (max-width: 740px) {
+  .movies__container {
+    width: 100%;
+  }
+  .movie-list {
+    width: fit-content;
+    grid-template-columns: 1fr 1fr;
+    margin: 0 auto;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .movie-list {
+    width: fit-content;
+    grid-template-columns: 1fr;
+    align-items: center;
+  }
 }
