--- a/src/pages/Detail/Detail.scss
+++ b/src/pages/Detail/Detail.scss
@@ -7,8 +7,6 @@
   border: 1px solid #3f37c9;
   &__image {
     border: 1px solid #3f37c9;
-    -webkit-box-shadow: 0px 0px 0px 0px #3f37c9;
-    box-shadow: 0px 0px 0px 0px #3f37c9;
   }
   &__info {
     margin-top: 10px;
@@ -39,10 +37,39 @@
   background-color: transparent;
   border: none;
   font-family: inherit;
-  font-style: 16px;
+  font-size: 20px;
+  font-weight: 500;
   color: inherit;
   position: absolute;
-  top: 25px;
+  top: 18px;
   left: calc(100vw / 2 - 290px);
   cursor: pointer;
+}
+
+@media only screen and (max-width: 620px) {
+  .movie-detail {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    border: none;
+    &__image {
+      border: none;
+      width: 100%;
+      height: 300px;
+      object-fit: cover;
+    }
+    &__info,
+    &__title,
+    &__director,
+    &__description {
+      margin: 20px;
+      padding: 0;
+    }
+    &__data {
+      margin-left: 0;
+    }
+  }
+  .go-back {
+    left: 15px;
+  }
 }
