Added footer styles

--- a/src/App.scss
+++ b/src/App.scss
@@ -9,3 +9,10 @@
   margin: 10px 0;
   font-weight: 500;
 }
+
+.footer {
+  font-size: 14px;
+  width: 100vw;
+  text-align: center;
+  padding: 30px 0 20px;
+}
