--- a/src/pages/Detail/Detail.scss
+++ b/src/pages/Detail/Detail.scss
@@ -2,7 +2,7 @@
 
 .movie-detail {
   width: 573px;
-  margin: 20px auto;
+  margin: 20px auto 0;
   padding: 20px;
   border: 1px solid #3f37c9;
   &__image {
