Adjusted heading and footer styles

--- a/src/index.scss
+++ b/src/index.scss
@@ -8,6 +8,8 @@ body {
   margin: 0;
   font-family: Montserrat, Helvetica, sans-serif;
   color: #3f37c9;
+  width: 100vw;
+  height: 100vh;
 }
 
 p,
