--- a/src/App.scss
+++ b/src/App.scss
@@ -1,18 +1,22 @@
 .ghiblist {
   width: 100vw;
+  height: 100vh;
 }
 
 .heading {
   font-style: italic;
   text-align: center;
   width: 100%;
-  margin: 10px 0;
+  height: 40px;
+  margin: 0 0 10px;
+  padding-top: 10px;
   font-weight: 500;
 }
 
 .footer {
   font-size: 14px;
+  height: 50px;
   width: 100vw;
   text-align: center;
-  padding: 30px 0 20px;
+  padding: 30px 0;
 }
