Added error message to MovieList and DetailCard

--- a/src/components/DetailCard/DetailCard.scss
+++ b/src/components/DetailCard/DetailCard.scss
@@ -33,6 +33,12 @@
   margin: 1000px auto;
 }
 
+.error {
+  width: 100%;
+  text-align: center;
+  padding-top: 200px;
+}
+
 @media only screen and (max-width: 620px) {
   .movie-detail {
     width: 100%;
