Added primary color to sass variable

--- a/src/components/DetailCard/DetailCard.scss
+++ b/src/components/DetailCard/DetailCard.scss
@@ -1,12 +1,13 @@
+@use "../../styles-assets/variables";
 @import "../../styles-assets/extends";
 
 .movie-detail {
   width: 573px;
   margin: 20px auto 0;
   padding: 20px;
-  border: 1px solid #3f37c9;
+  border: 1px solid variables.$primary-color;
   &__image {
-    border: 1px solid #3f37c9;
+    border: 1px solid variables.$primary-color;
   }
   &__info {
     margin-top: 10px;
