--- a/src/styles-assets/_extends.scss
+++ b/src/styles-assets/_extends.scss
@@ -1,3 +1,5 @@
+@use "./variables";
+
 %loader {
   &:after {
     border-radius: 50%;
@@ -14,7 +16,7 @@
   border-top: 10px solid rgba(63, 55, 201, 0.2);
   border-right: 10px solid rgba(63, 55, 201, 0.2);
   border-bottom: 10px solid rgba(63, 55, 201, 0.2);
-  border-left: 10px solid #3f37c9;
+  border-left: 10px solid variables.$primary-color;
   -webkit-transform: translateZ(0);
   -ms-transform: translateZ(0);
   transform: translateZ(0);
